--- a/index.html
+++ b/index.html
@@ -2,24 +2,24 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Goal Tracker - Home</title>
-  <link rel="stylesheet" href="styles.css" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Life Tracker</title>
+  <link rel="stylesheet" href="styles/styles.css" />
 </head>
 <body>
-  <header><h1>📊 Goal Tracker - Dashboard</h1></header>
-  <main>
-    <section class="summary">
-      <h2>Weekly Summary</h2>
-      <canvas id="weeklyChart"></canvas>
-    </section>
-    <nav class="nav-buttons">
-      <a href="planner.html">📅 Planner</a>
-      <a href="history.html">📚 History</a>
-      <a href="settings.html">⚙️ Settings</a>
+  <header>
+    <h1>Life Tracker</h1>
+    <nav>
+      <a href="index.html">Home</a>
+      <a href="planner.html">Planner</a>
+      <a href="history.html">History</a>
+      <a href="settings.html">Settings</a>
     </nav>
+  </header>
+  <main>
+    <h2>Welcome to Your Life Tracker</h2>
+    <p>Use the planner to schedule your tasks and track progress.</p>
   </main>
-  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-  <script src="scripts.js"></script>
+  <script src="scripts/scripts.js"></script>
 </body>
 </html>
