--- a/planner.html
+++ b/planner.html
@@ -1,18 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Planner</title>
-  <link rel="stylesheet" href="styles.css" />
+  <link rel="stylesheet" href="styles/styles.css">
 </head>
 <body>
-  <header><h1>📅 Weekly Planner</h1></header>
+  <header>
+    <h1>Planner</h1>
+    <nav>
+      <a href="index.html">Home</a>
+      <a href="planner.html">Planner</a>
+      <a href="history.html">History</a>
+      <a href="settings.html">Settings</a>
+    </nav>
+  </header>
   <main>
-    <div id="plannerGrid"></div>
-    <button onclick="addTask()">Add Task</button>
-    <a href="index.html">← Back to Home</a>
+    <p>Weekly calendar view will appear here.</p>
   </main>
-  <script src="scripts.js"></script>
+  <script src="scripts/scripts.js"></script>
 </body>
 </html>
